syntax = "proto3";

// Schedular to WorkerNode & WorkerNodeToWorkerNode

service WorkerService {
	rpc ProcessOperator(ProcessOperatorRequest) returns (ProcessOperatorReply) {}
}

message DIDAMetaRecord {
	int32 id = 1;
	// other metadata to be specified by the students
}

message DIDAOperatorID {
	string classname = 1;
	int32 order = 2;
}

message DIDAAssignment {
	DIDAOperatorID operatorId = 1;
	string host = 2;
	int32 port = 3;
	string output = 4;
}

message ProcessOperatorRequest {
	DIDAMetaRecord meta = 1;
	string input = 2;
	int32 next = 3;
	int32 chainSize = 4;
	repeated DIDAAssignment chain = 5;
}

message ProcessOperatorReply {
	bool okay = 1;
}

